[package]
name = "qexed_shared"
edition = "2024"
[features]
default = []
distributed = []
[dependencies]
anyhow = { workspace = true }
tokio  = { workspace = true } 
thiserror.workspace = true
dashmap.workspace = true
async-trait.workspace = true
log.workspace = true
tklog.workspace = true
futures.workspace = true
qexed_task.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
difference = "2.0"
[dev-dependencies]
tokio-test = "0.4.4"
