[package]
name = "qexed_config"
version = "0.1.0"
edition = "2024"
[features]
default = []
distributed = []

[dependencies]
qexed_random.workspace = true
qexed_packet.workspace = true
qexed_protocol.workspace = true
qexed_nbt.workspace = true
qexed_config_macros.workspace = true
anyhow = {workspace = true}
serde.workspace = true
toml.workspace = true
humantime-serde.workspace = true
log.workspace = true
tklog.workspace = true
uuid.workspace = true
serde_json.workspace = true
rand.workspace = true